syntax = "proto3";

package com.mintter.documents.v1alpha;

import "google/protobuf/empty.proto";
import "documents/v1alpha/resources.proto";

option go_package = "mintter/api/go/documents/v1alpha;documents";

// Drafts service is separate from Publications for the access-control purposes,
// but overall there're not many differences between the two.
service Drafts {
  rpc CreateDraft(CreateDraftRequest) returns (Document);

  rpc DeleteDraft(DeleteDraftRequest) returns (google.protobuf.Empty);

  rpc GetDraft(GetDraftRequest) returns (Document);

  rpc UpdateDraft(UpdateDraftRequest) returns (UpdateDraftResponse);

  rpc ListDrafts(ListDraftsRequest) returns (ListDraftsResponse);

  rpc PublishDraft(PublishDraftRequest) returns (PublishDraftResponse);
}

message CreateDraftRequest {}

message DeleteDraftRequest {}

message GetDraftRequest {}

message UpdateDraftRequest {}

message UpdateDraftResponse {}

message ListDraftsRequest {}

message ListDraftsResponse {}

message PublishDraftRequest {}

message PublishDraftResponse {}

// Publications service provides access to the publications.
service Publications {
  rpc GetPublication(GetPublicationRequest) returns (Publication);

  rpc DeletePublication(DeletePublicationRequest) returns (google.protobuf.Empty);

  rpc ListPublications(ListPublicationsRequest) returns (ListPublicationsResponse);
}

message GetPublicationRequest {}

message DeletePublicationRequest {}

message ListPublicationsRequest {}

message ListPublicationsResponse {}
